fix sonar reported issues